Closed Bug 499660 Opened 15 years ago Closed 15 years ago

Firefox should use English dictionary by default with Chinese or Japanese locale

Categories

(Core :: DOM: Editor, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

Details

Attachments

(1 file, 1 obsolete file)

Steps to reproduce:
Reset "spellchecker.dictionary" in about:config.
Install several language packs and dictionaries.
Use zh-CN locale, which doesn't have corresponding dictionary.
Try to use spellchecker, on my machine, it uses first dictionary, which is Swedish.

Expected result:
Fall back to English dictionary if the current locale doesn't have a dictionary.
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #384377 - Flags: review?
Attachment #384377 - Flags: review? → review?(neil)
Attachment #384377 - Flags: review?(neil) → review+
Comment on attachment 384377 [details] [diff] [review]
patch

>+      CopyASCIItoUTF16("en-US", dictName);
>+      rv = SetCurrentDictionary(dictName.get());
You don't use dictName again so you can just use NS_LITERAL_STRING("en-US")

r=me with that fixed.
Attached patch patch to commitSplinter Review
Attachment #384377 - Attachment is obsolete: true
http://hg.mozilla.org/mozilla-central/rev/95549b581c29
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: