Bug 499660 Firefox should use English dictionary by default with CJK locale r=neil